--- a/css/admin.css
+++ b/css/admin.css
@@ -143,6 +143,10 @@ html, body {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     overflow-x: auto;
 }
+.container table {
+    width: 100%;
+    border-collapse: collapse;
+}
 
 body {
     margin: 0;
