--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,4 @@
-/* Sayfa Arka Plan ve Genel Yapı */
+
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
@@ -7,7 +7,7 @@ body {
     color: #333;
 }
 
-/* Sayfa İçeriği */
+
 .contact-page {
     max-width: 900px;
     margin: 60px auto;
@@ -18,13 +18,13 @@ body {
     text-align: center;
 }
 
-/* Logo */
+
 .contact-logo img {
     width: 140px;
     margin-bottom: 26px;
 }
 
-/* Bölüm Başlıkları */
+
 .about-us h2,
 .working-hours h2 {
     font-size: 28px;
@@ -32,7 +32,7 @@ body {
     font-family: 'Playfair Display', serif;
 }
 
-/* Açıklama Paragrafları */
+
 .about-us p,
 .working-hours p {
     font-size: 19px;
@@ -41,7 +41,7 @@ body {
     margin-bottom: 18px;
 }
 
-/* NAVBAR */
+
 .logo-link {
     display: flex;
     align-items: center;
@@ -119,7 +119,7 @@ body {
 .footer-highlight {
     flex-grow: 1;
     text-align: center;
-    transform: translateX(-30px); /* hafif sola kaydırma */
+    transform: translateX(-30px); 
 }
 
 .footer-highlight p {
